# crypto-suite-lab

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  docker-compose.yml
client/: CMakeLists.txt  main.cpp
client/include/: clientcore.h  logindialog.h  mainwindow.h
client/src/: clientcore.cpp  logindialog.cpp  mainwindow.cpp
core/: CMakeLists.txt
core/include/: chord.h  sha384.h  steganography.h  vigenere.h
core/src/: chord.cpp  sha384.cpp  steganography.cpp  vigenere.cpp
docs/: requirements.md
docs/doxygen/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  chord_8cpp.html  chord_8cpp.js  chord_8h.html  chord_8h.js  chord_8h_source.html  class_core_tests-members.html  class_core_tests.html  class_core_tests.js  classes.html  classpd_1_1client_1_1_client_core-members.html  classpd_1_1client_1_1_client_core.html  classpd_1_1client_1_1_client_core.js  classpd_1_1client_1_1_login_dialog-members.html  classpd_1_1client_1_1_login_dialog.html  classpd_1_1crypto_1_1_sha384.html  (+132 more)
docs/testing/: checklist.csv  defects.csv  test-cases.csv  test-plan.md
docs/uml/: README.md  architecture.puml  class_client.puml  class_server.puml  use_case.puml
docs/wiki/: Architecture.md  Build-and-Run.md  Chord-Method.md  FAQ.md  Home.md  Protocol.md  Roles-and-Security.md  Steganography.md  Testing.md
scripts/: setup_branches.sh
server/: CMakeLists.txt  main.cpp
server/include/: clienthandler.h  database.h  protocol.h  server.h
server/src/: clienthandler.cpp  database.cpp  protocol.cpp  server.cpp
tests/: CMakeLists.txt  test_core.cpp
(+90 files in other folders)
